--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Lydia</span>
+        <span id="name">Amanda</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">Guess what?</p>
     </div>
     <div class="three">
-      <p>It's your birthday!!! :D</p>
+      <p>It's your birthday!01!!</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox">Welcome to the 30 club.</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
-      <p class="idea-3">I realised, I wanted to do something
-        <strong>special</strong>.</p>
-      <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special
+      <p class="idea-1">It's been a year of ups and downs</p>
+      <p class="idea-2">And even though some of it was pretty shitty</p>
+      <p class="idea-3">I'm glad I got to spend it all with
+        <strong>you!</strong>.</p>
+      <p class="idea-4">Anyhow,</p>
+      <p class="idea-5">hope you'll enjoy your day
         <span>:)</span>
       </p>
       <p class="idea-6">
-        <span>S</span>
-        <span>O</span>
+        <span>Ohh,</span><br/>
+        <span>and</span>
       </p>
     </div>
     <div class="six">
@@ -47,7 +47,8 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 id="wishText">Here's to the next 30, skiing (so exited), and a lot more adventures!</h5>
+        <h5>- Simen</h5>
       </div>
     </div>
     <div class="seven">
@@ -58,24 +59,28 @@
         <img src="img/ballon1.svg" alt="">
         <img src="img/ballon2.svg" alt="">
         <img src="img/ballon3.svg" alt="">
+        <img src="img/drink.png" alt="">
+        <img src="img/ballon2.svg" alt="">
+        <img src="img/ballon3.svg" alt="">
+        <img src="img/ballon1.svg" alt="">
+        <img src="img/drink.png" alt="">
+        <img src="img/ballon2.svg" alt="">
+        <img src="img/ballon3.svg" alt="">
+        <img src="img/ballon2.svg" alt="">
+        <img src="img/ballon1.svg" alt="">
+        <img src="img/ballon3.svg" alt="">
+        <img src="img/drink.png" alt="">
         <img src="img/ballon2.svg" alt="">
         <img src="img/ballon3.svg" alt="">
         <img src="img/ballon1.svg" alt="">
         <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
         <img src="img/ballon1.svg" alt="">
         <img src="img/ballon3.svg" alt="">
         <img src="img/ballon3.svg" alt="">
         <img src="img/ballon1.svg" alt="">
         <img src="img/ballon2.svg" alt="">
         <img src="img/ballon3.svg" alt="">
+        <img src="img/drink.png" alt="">
         <img src="img/ballon2.svg" alt="">
         <img src="img/ballon1.svg" alt="">
         <img src="img/ballon3.svg" alt="">
@@ -117,9 +122,8 @@
       </svg>
     </div>
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
-      <p class="last-smile">:)</p>
+      <p>Okay, that's it.</p>
+      <p id="replay">(click to play again)</p>
     </div>
   </div>
 </body>
