--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">Here's to the next 30, skiing (so exited), and a lot more adventures!</h5>
+        <h5 id="wishText">Here's to the next 30, skiing (so excited), and a lot more adventures!</h5>
         <h5>- Simen</h5>
       </div>
     </div>
